--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -45,15 +45,18 @@
         <div class="container">
             <div class="main-section-wrap">
                 <div class="left-part">
-                    <h1>Без проблемная доставка купленных вещей из США, Европы и Азии в <br> Россию</h1>
-                    <p class="main-section-description">Сэкономьте на покупках и наслаждайтесь мировыми брендами <br> —
-                        наш сервис позволяет вам легко и удобно заказывать
-                        товары со всего <br> мира и получать их в России</p>
+                    <div class="adaptive-wrapper">
+                        <h1>Без проблемная доставка купленных вещей из США, Европы и Азии в Россию</h1>
+                        <p class="main-section-description">Сэкономьте на покупках и наслаждайтесь мировыми брендами —
+                            наш сервис позволяет вам легко и удобно заказывать
+                            товары со всего мира и получать их в России</p>
+                    </div>
                     <img class="main-img" src="./assets/img/Main-img.png" alt="Main-img">
                 </div>
                 <div class="right-part">
                     <span class="span-calculator">Калькулятор доставки</span>
-                    <p class="delivery-calculation">Посчитайте, сколько будет стоить перевозка <br> покупки из зарубежа </p>
+                    <p class="delivery-calculation">Посчитайте, сколько будет стоить перевозка <br> покупки из зарубежа
+                    </p>
                     <form class="form">
                         <input class="text" type="text" placeholder="Имя">
                         <input class="customer-data indent" type="email" placeholder="Почта">
@@ -78,42 +81,49 @@
                     <img class="second-img" src="./assets/img/Picture-1.svg" alt="Picture-1">
                     <div class="service-name-description">
                         <span class="service-name">Растоможка груза</span>
-                        <p class="service-description">Мы берём на себя все формальности <br> и бумажную волокиту, связанную <br> с растаможкой груза</p>
+                        <p class="service-description">Мы берём на себя все формальности <br> и бумажную волокиту,
+                            связанную <br> с растаможкой груза</p>
                     </div>
                 </div>
                 <div class="title-description">
                     <img class="second-img" src="./assets/img/Picture-2.svg" alt="Picture-2">
                     <div class="service-name-description">
                         <span class="service-name">Надёжная упаковка</span>
-                        <p class="service-description">Все товары упаковываются нашими <br> специалистами с особым вниманием <br> к деталям, гарантируя, что они дойдут <br> в безопасности и в отличном состоянии</p>
+                        <p class="service-description">Все товары упаковываются нашими <br> специалистами с особым
+                            вниманием <br> к деталям, гарантируя, что они дойдут <br> в безопасности и в отличном
+                            состоянии</p>
                     </div>
                 </div>
                 <div class="title-description">
                     <img class="second-img" src="./assets/img/Picture-3.svg" alt="Picture-3">
                     <div class="service-name-description">
                         <span class="service-name">Быстро и выгодно</span>
-                        <p class="service-description">Мы предлагаем быструю и выгодную <br> доставку, чтобы вы могли насладиться <br> покупками как можно скорее.</p>
+                        <p class="service-description">Мы предлагаем быструю и выгодную <br> доставку, чтобы вы могли
+                            насладиться <br> покупками как можно скорее.</p>
                     </div>
                 </div>
                 <div class="title-description">
                     <img class="second-img" src="./assets/img/Picture-4.svg" alt="Picture-4">
                     <div class="service-name-description">
                         <span class="service-name">Удобный сервис</span>
-                        <p class="service-description">Стремимся сделать процесс доставки <br> максимально удобным для вас, чтобы <br> опыт остался приятным и беззаботным</p>
+                        <p class="service-description">Стремимся сделать процесс доставки <br> максимально удобным для
+                            вас, чтобы <br> опыт остался приятным и беззаботным</p>
                     </div>
                 </div>
                 <div class="title-description">
                     <img class="second-img" src="./assets/img/Picture-5.svg" alt="Picture-5">
                     <div class="service-name-description">
                         <span class="service-name">Прозрачность работы</span>
-                        <p class="service-description">Мы предоставляем полный контроль <br> над каждым этапом доставки, от момента <br> заказа до момента прибытия заказа</p>
+                        <p class="service-description">Мы предоставляем полный контроль <br> над каждым этапом доставки,
+                            от момента <br> заказа до момента прибытия заказа</p>
                     </div>
                 </div>
                 <div class="title-description">
                     <img class="second-img" src="./assets/img/Picture-6.svg" alt="Picture-6">
                     <div class="service-name-description">
                         <span class="service-name">Страхование груза</span>
-                        <p class="service-description">Наше страхование обеспечивает полную <br> защиту и покрытие почти все неприятные <br> и неожиданные ситуации</p>
+                        <p class="service-description">Наше страхование обеспечивает полную <br> защиту и покрытие почти
+                            все неприятные <br> и неожиданные ситуации</p>
                     </div>
                 </div>
             </div>
@@ -124,19 +134,19 @@
             <h2 class="quality-assurances">Гарантии качества</h2>
             <p class="guarantee-text">Наши гарантии качества включают в себя полный спектр документов, необходимых <br> для ввоза и вывоза товаров, а также для успешного бизнеса на мировом рынке. <br> Мы предоставляем вам надёжность и уверенность</p>
             <div class="document-list">
-                <div>
+                <div class="document-list-wrapper">
                     <img src="./assets/img/Сertificate-1.png" alt="Certificate-1">
                     <span class="document-title">Свидетельство о регистрации в РФ</span>
                 </div>
-                <div>
+                <div class="document-list-wrapper">
                     <img src="./assets/img/Сertificate-2.png" alt="Certificate-2">
                     <span class="document-title">Свидетельство о регистрации в США</span>
                 </div>
-                <div>
+                <div class="document-list-wrapper">
                     <img src="./assets/img/Certificate-3.png" alt="Certificate-3">
                     <span class="document-title">Свидетельство о регистрации в <br> Китае</span>
                 </div>
-                <div>
+                <div class="document-list-wrapper">
                     <img src="./assets/img/Certificate-4.png" alt="Certificate-4">
                     <span class="document-title">Свидетельство о регистрации в <br> Великобритнии</span>
                 </div>
@@ -150,11 +160,15 @@
             <div class="feedback-wrapper">
                 <button class="image-button"></button>
                 <div class="description-feedback">
-                    <p>Я заказала последний iPhone <br> из США через ваш сервис, и доставка <br> прошла быстро и без каких‑либо проблем. Гарантии качества и надёжная упаковка <br> сделали мой опыт покупки невероятно позитивным</p>
+                    <p>Я заказала последний iPhone из США через ваш сервис, и доставка прошла быстро и без
+                        каких‑либо проблем. Гарантии качества и надёжная упаковка сделали мой опыт покупки
+                        невероятно позитивным</p>
                     <span class="name">Анна</span>
                 </div>
                 <div class="description-feedback">
-                    <p>Я уже несколько лет заказываю <br> дизайнерскую одежду из Франции <br> через ваш сервис, и он никогда меня <br> не подводил. Важно иметь надёжную <br> компанию, которая позаботится о вашем <br> заказе и предоставит все необходимые <br> документы для ввоза в Россию</p>
+                    <p>Я уже несколько лет заказываю дизайнерскую одежду из Франции через ваш сервис, и он
+                        никогда меня не подводил. Важно иметь надёжную компанию, которая позаботится о вашем
+                        заказе и предоставит все необходимые документы для ввоза в Россию</p>
                     <span class="name">Алексей</span>
                 </div>
                 <button class="image-button right"></button>
@@ -217,7 +231,6 @@
                 в ст. 437 ГК РФ. Вся информация на сайте может содержать неточности, орфографические и иные ошибки,
                 она не является полной, окончательно и исчерпывающей</p>
         </div>
-
     </footer>
 </body>
 
